# Sailor

./: .gitignore  CMakeLists.txt  Makefile  README.md  portfolio.db  run.sh
Include/: AssetService.h  DatabaseManager.h  JpMorganService.h  TradeManager.h  TradeRepository.h  TransactionDTO.h
scripts/: db-setup.sql  mock-data.sql
src/: AssetService.cpp  DatabaseManager.cpp  JpMorganService.cpp  TradeManager.cpp  TradeRepository.cpp  main.cpp
